Fix Layout & Spacing of catalog layout and product price. Improve position of aside input elements in catalog page

--- a/src/styles/components/_product-card.scss
+++ b/src/styles/components/_product-card.scss
@@ -38,7 +38,7 @@
     line-height: $line-height-4xl;
     letter-spacing: -0.5px;
     font-family: $font-headings;
-    margin-block: 0;
+    margin-block: 0 8px;
   }
 }
 
