--- a/src/styles/layouts/_catalog-page.scss
+++ b/src/styles/layouts/_catalog-page.scss
@@ -8,7 +8,6 @@
     display: flex;
     flex-direction: row-reverse;
     align-items: flex-start;
-    gap: 32px;
     justify-content: center;
   }
 
