--- a/src/styles/layouts/_catalog-sidebar-filter.scss
+++ b/src/styles/layouts/_catalog-sidebar-filter.scss
@@ -4,6 +4,13 @@
   margin-right: 64px;
 }
 
+.aside__block-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin-block: 16px 0;
+}
+
 .aside__input,
 .aside-radio {
   position: absolute;
@@ -54,7 +61,7 @@
   &--radio {
     position: relative;
     padding-left: 28px;
-    margin-bottom: 16px;
+    margin-bottom: 8px;
     display: flex;
 
     &::before {
